# Gestalt

./: .cursorrules  .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  LICENSE  OUR_PROJECT.md  Project_Plan.txt  README.md  TROUBLESHOOTING.md  agents.py  amazon_api.py  app.py  compatibility_checker.py  conflict_resolver.py  crew.py  ebay_api.py  eli5.py  http_utils.py  intake.py  parts.json  parts_catalog.py  price_comparison.py  pyproject.toml  render.yaml  schemas.py
.cursor/rules/: core.md  core.mdc  git-workflow.mdc  pull-requests.mdc  refresh.md  refresh.mdc  request.md  request.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
debug/: crash_report.template.md
scripts/: gh  sse_smoke.py
src/gestalt/: __init__.py  crew.py  main.py
src/gestalt/config/: agents.yaml  tasks.yaml
src/gestalt/tools/: __init__.py  custom_tool.py
static/: hexcore.css  style.css
templates/: index.html
tests/: test_amazon_api_serper.py  test_analysis_crew.py  test_compatibility_checker.py  test_conflict_resolver.py  test_constraints_and_confidence.py  test_e2e_pipeline.py  test_eli5.py  test_gemini_smoke.py  test_gestalt_imports.py  test_intake.py  test_live_pricing_smoke.py  test_ops_endpoints.py  test_parts_catalog.py  test_price_comparison_rollups.py  test_sse_contract.py
