[project]
name = "gestalt"
version = "0.1.0"
description = "Guardrail-first agentic workflows with CrewAI"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai[tools]>=0.100.0",
]

[project.scripts]
gestalt = "gestalt.main:run"
run_crew = "gestalt.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gestalt"]

[tool.crewai]
type = "crew"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
